--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -88,3 +88,21 @@
 .mypage {
   color: black;
 }
+
+
+@media screen and (max-width:480px){
+#datetime {
+  display: none;
+}
+.header {
+  width: 100%;
+  height: 15vh;
+}
+.header__left {
+  padding-left: 20px;
+}
+.fas {
+  font-size: 20px;
+}
+
+}
