--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -97,6 +97,8 @@
 .header {
   width: 100%;
   height: 15vh;
+  display: block!important;
+  text-align: center;
 }
 .header__left {
   padding-left: 20px;
