--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -94,17 +94,21 @@
 #datetime {
   display: none;
 }
+
 .header {
   width: 100%;
   height: 15vh;
   display: block!important;
   text-align: center;
-}
+
 .header__left {
   padding-left: 20px;
 }
 .fas {
   font-size: 20px;
 }
-
+  .search-input {
+    width: auto;
+  }
+}
 }
