--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -130,3 +130,51 @@
   width: 100%;
   height: 190px;
 }
+
+@media screen and (max-width:480px){
+.user-top {
+  height: 480px!important;
+}
+.user-top__image {
+height: 80px!important;
+.user-image2 {
+height: 80px!important;
+}
+}
+.user-top__bottom {
+  display: block!important;
+  height: 400px!important;
+}
+.user-top__bottom__left {
+  padding-top: 0!important;
+}
+.user-edit {
+  padding-top: 0!important;
+}
+.user-top__bottom__center {
+  padding-top: 0!important;
+}
+h1 {
+  font-size: 20px!important;
+  line-height: 1.2!important;
+}
+.twiter {
+  padding-top: 0!important;
+  font-size: 20px!important;
+}
+.user-top__bottom__bottom {
+  margin-top: 0!important;
+  height: 100px!important;
+  width: 100%!important;
+}
+.user-top__bottom__right {
+  width: 100%!important;
+}
+.todo_box {
+  padding-left: 10px;
+}
+.todo-box {
+  overflow: scroll;
+  height: 135px;
+}
+}
