--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -100,7 +100,7 @@
   }
 }
 @media screen and (max-width:480px){
-  #ytplayer {
+  #show-ytplayer {
     width: 100%!important;
     height: 210px;
   }
