--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -62,7 +62,7 @@
         - @posts.each do |post|
           .user-posts 
             .user-posts__item
-              %iframe#ytplayer{:frameborder => "0", :height => "110", :width => "210", :src => "https://www.youtube.com/embed/#{post.video}?start=#{(post.starta*60)+post.startb}&end=#{(post.enda*60)+post.endb}", :type => "text/html"}
+              %iframe#user-ytplayer{:frameborder => "0", :height => "110", :width => "210", :src => "https://www.youtube.com/embed/#{post.video}?start=#{(post.starta*60)+post.startb}&end=#{(post.enda*60)+post.endb}", :type => "text/html"}
             .user-box__title
               = link_to "#{post.title}", "/posts/#{post.id}",class:"user-name"
             .user-list
