--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -3,10 +3,23 @@
     - if @image.present?
       = image_tag @image.url, class: 'account-page__inner--icon__input__image', width: '10%',height:'10%'
       = f.file_field :image, class: 'account-page__inner--icon__input__btn', id: 'upload-icon'
+    .field
+      = f.label :nickname
+      %em (6 characters maximum)
+      %br/
+      = f.text_field :nickname, autofocus: true, maxlength: "6"
+    .field
+      = f.label :email
+      %br/
+      = f.email_field :email, autofocus: true, autocomplete: "email"
+    .field
+      =f.label :image
+      %br/
+      = f.file_field :image, autofocus: true
   .account-page__inner--user-form
     .field-label
       = f.label :profile
     .field-input
-      = f.text_area :profile, autocomplete: 'off'
+      = f.text_area :profile, autocomplete: 'off' 
   = f.submit "Send"
 
