--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -21,7 +21,8 @@
             - if @image.present?
               = image_tag @image.url, class: 'user-image', width: '50%',height:'50%'
             .user-edit
-              = link_to "プロフィール変更", "/users/#{@user.id}/edit"
+              -if current_user == @user
+                = link_to "プロフィール変更", "/users/#{@user.id}/edit"
           .user-top__bottom__center
             %h1= "#{@nickname}"
             %p.twiter
