--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,7 +22,7 @@
               = image_tag @image.url, class: 'user-image', width: '50%',height:'50%'
             .user-edit
               -if current_user == @user
-                = link_to "プロフィール変更", "/users/#{@user.id}/edit"
+                = link_to "プロフィール変更", "/users/#{@user.id}/edit",class:"edit-profile"
           .user-top__bottom__center
             %h1= "#{@nickname}"
             %p.twiter
