--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -16,14 +16,11 @@
         color: rgb(0, 47, 255);
         text-decoration: none;
         &__text {
-          font-size: 25px;
+          font-size: 27px;
           color: black;
-          font-family: sans-serif	
+          font-family: -webkit-pictograph;
         }
       }
-    }
-    #datetime {
-      
     }
   }  
   &__search  {
