--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -10,7 +10,7 @@
   .user-main {
     width: 90%;
     height: 100%;
-    margin: auto;
+    margin: 0 20px;
     overflow: scroll;
     text-align: center;
     .user-top {
@@ -67,6 +67,8 @@
           width: 25%;
           padding-top: 20px;
           .todo-box {
+            height: 90px;
+            overflow: scroll;
             .delete {
               color: black;
               opacity: 0.4;
@@ -129,6 +131,9 @@
 .user-image2 {
   width: 100%;
   height: 190px;
+}
+.edit-profile {
+  color: black;
 }
 
 @media screen and (max-width:480px){
