--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -3,15 +3,23 @@
   .main
     .main__side
       .categories 
-        =link_to "#{@sport.name}", category_path(@sport.id) ,class:"category-name1"
+        <i class="fas fa-running"></i>
+        %span=link_to "#{@sport.name}", category_path(@sport.id) ,class:"category-name1"
       .categories 
-        =link_to "#{@comedy.name}", category_path(@comedy.id),class:"category-name1"
+        <i class="fas fa-theater-masks"></i>
+        %span=link_to "#{@comedy.name}", category_path(@comedy.id),class:"category-name1"
       .categories 
-        =link_to "#{@book.name}", category_path(@book.id),class:"category-name1"
+        <i class="fas fa-book"></i>
+        %span=link_to "#{@book.name}", category_path(@book.id),class:"category-name1"
       .categories
-        =link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
+        <i class="fas fa-globe-africa"></i>
+        %span=link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
       .categories
-        =link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
+      .categories
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@makonari.name}", category_path(@makonari.id),class:"category-name1"
     .contents_new
       .content_box 
         = form_with model: @post, local: true do |f| 
