--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -8,7 +8,7 @@
     width: 16%;
   }
   .user-main {
-    width: 90%;
+    width: 100%;
     height: 100%;
     margin: 0 20px;
     overflow: scroll;
@@ -69,6 +69,8 @@
           .todo-box {
             height: 90px;
             overflow: scroll;
+            text-align: start;
+            padding-left: 30px;
             .delete {
               color: black;
               opacity: 0.4;
