--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -3,15 +3,26 @@
   .main
     .main__side
       .categories 
-        =link_to "#{@sport.name}", category_path(@sport.id) ,class:"category-name1"
+        <i class="fas fa-running"></i>
+        %span=link_to "#{@category1.name}", category_path(@category1.id) ,class:"category-name1"
       .categories 
-        =link_to "#{@comedy.name}", category_path(@comedy.id),class:"category-name1"
+        <i class="fas fa-theater-masks"></i>
+        %span=link_to "#{@category2.name}", category_path(@category2.id),class:"category-name1"
       .categories 
-        =link_to "#{@book.name}", category_path(@book.id),class:"category-name1"
+        <i class="fas fa-book"></i>
+        %span=link_to "#{@category3.name}", category_path(@category3.id),class:"category-name1"
       .categories
-        =link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
+        <i class="fas fa-globe-africa"></i>
+        %span=link_to "#{@category4.name}", category_path(@category4.id),class:"category-name1"
       .categories
-        =link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@category5.name}", category_path(@category5.id),class:"category-name1"
+      .categories
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@category6.name}", category_path(@category6.id),class:"category-name1"
+      .categories
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@category7.name}", category_path(@category7.id),class:"category-name1"
     .contents
       .main-space
         %h1= @category
