--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,22 +4,25 @@
     .main__side
       .categories 
         <i class="fas fa-running"></i>
-        %span=link_to "#{@sport.name}", category_path(@sport.id) ,class:"category-name1"
+        %span=link_to "#{@category1.name}", category_path(@category1.id) ,class:"category-name1"
       .categories 
         <i class="fas fa-theater-masks"></i>
-        %span=link_to "#{@comedy.name}", category_path(@comedy.id),class:"category-name1"
+        %span=link_to "#{@category2.name}", category_path(@category2.id),class:"category-name1"
       .categories 
         <i class="fas fa-book"></i>
-        %span=link_to "#{@book.name}", category_path(@book.id),class:"category-name1"
+        %span=link_to "#{@category3.name}", category_path(@category3.id),class:"category-name1"
       .categories
         <i class="fas fa-globe-africa"></i>
-        %span=link_to "#{@economy.name}", category_path(@economy.id),class:"category-name1"
+        %span=link_to "#{@category4.name}", category_path(@category4.id),class:"category-name1"
       .categories
         <i class="fas fa-male"></i>
-        %span=link_to "#{@honda.name}", category_path(@honda.id),class:"category-name1"
+        %span=link_to "#{@category5.name}", category_path(@category5.id),class:"category-name1"
       .categories
         <i class="fas fa-male"></i>
-        %span=link_to "#{@makonari.name}", category_path(@makonari.id),class:"category-name1"
+        %span=link_to "#{@category6.name}", category_path(@category6.id),class:"category-name1"
+      .categories
+        <i class="fas fa-male"></i>
+        %span=link_to "#{@category7.name}", category_path(@category7.id),class:"category-name1"
     .user-main
       .user-top
         .user-top__image
@@ -57,15 +60,16 @@
                   = f.submit "SEND", class: "form_submit"
               - else
                 %strong
-                  %p ※※※ TO-Doの投稿には新規登録/ログインが必要です ※※※
+                  %p ~TO-Do~
             .todo-box
               - if @todos
                 - @todos.each do |todo|
                   %p
                     %strong
                       = todo.content 
-                      %span
-                        =link_to '削除', "/users/#{current_user.id}/todos/#{todo.id}", method: :delete,class:"delete"
+                      - if current_user
+                        %span
+                          =link_to '削除', "/users/#{current_user.id}/todos/#{todo.id}", method: :delete,class:"delete"
 
       .user-box
         - @posts.each do |post|
